share link to social media added

--- a/RSSFeed/Base.lproj/Localizable.strings
+++ b/RSSFeed/Base.lproj/Localizable.strings
@@ -4,3 +4,7 @@
 "back.bar.button" = "Back!";
 
 "navigation.bar.openinbrowser" = "Open in Safari!";
+
+"navigation.bar.openinbrowser" = "Open in Safari!";
+
+"share.to.socialmedia" = "Share!";
