added refresh control

--- a/RSSFeed/Base.lproj/Localizable.strings
+++ b/RSSFeed/Base.lproj/Localizable.strings
@@ -1,9 +1,7 @@
 
 "search.bar.placeholder" = "Search here!";
 
-"back.bar.button" = "Back!";
-
-"navigation.bar.openinbrowser" = "Open in Safari!";
+"navigationbar.main.title" = "News!";
 
 "navigation.bar.openinbrowser" = "Open in Safari!";
 
