--- a/RSSFeed/ar.lproj/Localizable.strings
+++ b/RSSFeed/ar.lproj/Localizable.strings
@@ -1,7 +1,7 @@
 
 "search.bar.placeholder" = "fffff";
 
-"back.bar.button" = "!الى الخلف";
+"navigationbar.main.title" = "!أخبار";
 
 "navigation.bar.openinbrowser" = "!فتح في رحلات السفاري";
 
