--- a/RSSFeed/Base.lproj/Localizable.strings
+++ b/RSSFeed/Base.lproj/Localizable.strings
@@ -6,3 +6,5 @@
 "navigation.bar.openinbrowser" = "Open in Safari!";
 
 "share.to.socialmedia" = "Share!";
+
+"weathervc.navigation.title" = "Weather!";
