--- a/RSSFeed/ar.lproj/Localizable.strings
+++ b/RSSFeed/ar.lproj/Localizable.strings
@@ -6,3 +6,5 @@
 "navigation.bar.openinbrowser" = "!فتح في رحلات السفاري";
 
 "share.to.socialmedia" = "!شارك";
+
+"weathervc.navigation.title" = "!حالة الطقس";
